2011-10-20  Chong Yidong  <cyd@gnu.org>

	* erc.el (define-erc-module): Fix autogenerated docstring to
	reflect Emacs 24 minor mode changes.

	* erc-fill.el (erc-fill-mode):
	* erc-track.el (erc-track-minor-mode): Doc fix.

2011-09-23  Antoine Levitt  <antoine.levitt@gmail.com>

	* erc-button.el (erc-button-next-function): Scoping fix
	(Bug#9487).

2011-07-04  Vivek Dasmohapatra  <vivek@etla.org>

	* erc.el (erc-generate-new-buffer-name): Reuse old buffer names
	when reconnecting (bug#5563).

2011-06-23  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* erc.el (erc-ssl): Made into a synonym for erc-tls, which
	provides a superset of the same functionality.
	(erc-open-ssl-stream): Removed.
	(erc-open-tls-stream): Use `open-network-stream' instead of
	`open-tls-stream' directly to be able to use the built-in TLS
	support.

2011-05-28  Stefan Monnier  <monnier@iro.umontreal.ca>

	* erc-pcomplete.el (erc-pcompletions-at-point): Mark the completion
	data as non-exclusive if it's using the default-completion-function.
	(pcomplete-erc-parse-arguments): Rename pcomplete-parse-erc-arguments.
	(pcomplete-erc-setup): Use new name.

2011-05-03  Debarshi Ray  <rishi@gnu.org>  (tiny change)

	* erc-backend.el (671): New response handler.
	* erc.el (english): Add 671 to catalog.

2011-04-29  Stefan Monnier  <monnier@iro.umontreal.ca>

	* erc-pcomplete.el (erc-pcomplete-nick-postfix): Remove the " " in the
	suffix that's added by pcomplete-termination-string anyway.
	(pcomplete-erc-setup): Remove pcomplete-suffix-list setting now that
	it's not needed any more.

2011-04-26  Stefan Monnier  <monnier@iro.umontreal.ca>

	* erc.el (erc-mode-map): Use completion-at-point.
	(erc-mode): Tell completion-at-point to obey erc-complete-functions.
	(erc-complete-word-at-point): New function.
	(erc-complete-word): Make it obsolete.
	* erc-pcomplete.el (erc-pcompletions-at-point): New function.
	(pcomplete): Use it.
	* erc-dcc.el (erc-dcc-chat-mode-map): Use completion-at-point.