@@ -1,3 +1,7 @@
+2011-11-14  Juanma Barranquero  <lekktu@gmail.com>
+
+	* erc-notify.el (erc-notify-interval, erc-cmd-NOTIFY): Fix typos.
+
 2011-10-20  Chong Yidong  <cyd@gnu.org>
 
 	* erc.el (define-erc-module): Fix autogenerated docstring to
